Fix scroll bar jumping bug

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,5 +1,9 @@
 @import "bootstrap";
 
+html { 
+  overflow-y: scroll;
+}
+
 body {
   background: image_url('old_moon.png');
   font-family: 'comfortaabold', sans-serif;
@@ -19,6 +23,8 @@ body {
 
 .pagination {
   margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .pagination a {
